doc: thesis summary

--- a/thesis/literatur.bib
+++ b/thesis/literatur.bib
@@ -44,3 +44,31 @@
   type      = {Masterarbeit},
   school    = {Hochschule oder Universität, Ort},
 }
+
+@book{ericson2004real,
+  title={Real-Time Collision Detection},
+  author={Ericson, C.},
+  isbn={9781558607323},
+  year={2004},
+  publisher={Taylor \& Francis}
+}
+
+@article{Möller01011997,
+author = {Tomas Möller and Ben Trumbore},
+title = {Fast, Minimum Storage Ray-Triangle Intersection},
+journal = {Journal of Graphics Tools},
+volume = {2},
+number = {1},
+pages = {21--28},
+year = {1997},
+publisher = {Taylor \& Francis},
+}
+
+@book{VahlGordonClevenger+2021,
+title = {Computer Graphics Programming in OpenGL with C++},
+author = {Scott Vahl Gordon and John L. Clevenger},
+publisher = {Mercury Learning and Information},
+isbn = {9781683926719},
+year = {2021},
+pages = {483},
+}
