--- a/thesis/literatur.bib
+++ b/thesis/literatur.bib
@@ -72,3 +72,61 @@ isbn = {9781683926719},
 year = {2021},
 pages = {483},
 }
+
+@article{https://doi.org/10.1111/cgf.142662,
+author = {Meister, Daniel and Ogaki, Shinji and Benthin, Carsten and Doyle, Michael J. and Guthe, Michael and Bittner, Jiří},
+title = {A Survey on Bounding Volume Hierarchies for Ray Tracing},
+journal = {Computer Graphics Forum},
+volume = {40},
+number = {2},
+pages = {683-712},
+year = {2021}
+}
+
+@article{10.1145/15886.15916,
+author = {Kay, Timothy L. and Kajiya, James T.},
+title = {Ray tracing complex scenes},
+year = {1986},
+issue_date = {Aug. 1986},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {20},
+number = {4},
+issn = {0097-8930},
+url = {https://doi.org/10.1145/15886.15916},
+doi = {10.1145/15886.15916},
+abstract = {A new algorithm for speeding up ray-object intersection calculations is presented. Objects are bounded by a new type of extent, which can be made to fit convex hulls arbitrarily tightly. The objects are placed into a hierarchy. A new hierarchy traversal algorithm is presented which is efficient in the sense that objects along the ray are queried in an efficient order.Results are presented which demonstrate that our technique is several times faster than other published algorithms. Furthermore, we demonstrate that it is currently possible to ray trace scenes containing hundreds of thousands of objects.},
+journal = {SIGGRAPH Comput. Graph.},
+month = aug,
+pages = {269–278},
+numpages = {10}
+}
+
+@inproceedings{10.1145/15922.15916,
+author = {Kay, Timothy L. and Kajiya, James T.},
+title = {Ray tracing complex scenes},
+year = {1986},
+isbn = {0897911962},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/15922.15916},
+booktitle = {Proceedings of the 13th Annual Conference on Computer Graphics and Interactive Techniques},
+pages = {269–278},
+numpages = {10},
+series = {SIGGRAPH '86}
+}
+
+@inproceedings{10.1145/2492045.2492056,
+author = {Aila, Timo and Karras, Tero and Laine, Samuli},
+title = {On quality metrics of bounding volume hierarchies},
+year = {2013},
+isbn = {9781450321358},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2492045.2492056},
+booktitle = {Proceedings of the 5th High-Performance Graphics Conference},
+pages = {101–107},
+numpages = {7},
+location = {Anaheim, California},
+series = {HPG '13}
+}
