doc: thesis rework first part

--- a/thesis/literatur.bib
+++ b/thesis/literatur.bib
@@ -130,3 +130,12 @@ numpages = {7},
 location = {Anaheim, California},
 series = {HPG '13}
 }
+@article{meister2022performance,
+  title={Performance comparison of bounding volume hierarchies for GPU ray tracing},
+  author={Meister, Daniel and Bittner, Ji{\v{r}}{\'\i}},
+  journal={Journal of Computer Graphics Techniques (JCGT)},
+  volume={11},
+  number={4},
+  pages={1--19},
+  year={2022}
+}
