--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -542,26 +542,31 @@ end function
 \newpage
 
 \chapter{Ergebnisse}
-Alle Graphen:
-- Traversal-Speedup vs k (log-Skala): x = k, y = log2(Speedup)
-- Direct vs Collapse: Dumbbell, y = log2(Speedup)
-
-
-\section{Versuchssetup}
-Was wurde wie gemacht -> pipeline
 
 \section{Korrektheit}
-Die visuelle Ausgabe der Testruns ist für die jeweiligen Testszenen über alle möglichen Konstruktionsparameter konstant. Somit wird immer das gleiche Ergebnis geliefert. Zudem wird die reale Laufzeit mit der prognostizierten asympthotischen worst-case Laufzeit verglichen.
+Die visuelle Ausgabe der Testruns ist für die jeweiligen Testszenen über alle möglichen Konstruktionsparameter für alle Szenen pixelidentisch. Somit wird bewiesen immer das gleiche Ergebnis ausgegeben.
 
 \section{Traversal}
-- Hypothese Traversalzeiten ändern sich abhängig von k
-- H0 keine Änderung
-Die Darstellung der Ergebnisse orientiert sich an den Problemfragen.    
+Die erste Forschungsfrage beschäftigt sich damit, wie sich die Traversal-Time bei Top-Down-Konstruierten Wide BVHs für Verzweigungsgrade $k \in \{2, 4, 8, 16\}$ in statischen Szenen verändert. 
+
+Dabei wird die Traversal-Time der Wide BVH mit der Traversal-Time einer binären BVH für gleiche Modelle und Splitting-Algorithmen verglichen. Der Vergleichswert wird als \emph{Speedup} beschrieben, wobei ein Wert größer 1 als Verbesserung zu werten ist.
+
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[scale=0.4]{results/static_combined_speedup_k4.png}
+    \caption{Stanford Bunny mit sichtbaren Bounding Boxes}
+    \end{figure}
+\subsection{Zusammenfassung}
+
+\section{Wide BVH Konstruktionsmethode}
+Die zweiten Forschungsfrage bezieht sich darauf, inwiefern sich die Traversal-Time der BVHs zwischen direktem k-way splitting und collapse einer binären BVH abhängig von der gewählten statischen Szene verändern.
 
 \subsection{Zusammenfassung}
 
 \section{Dynamisches Modell}
-- Construction + Traversal Time
+Die dritte und letzte Forschungsfrage untersucht, wie sich Construction- und Traversal-Time als kombinierte Qualitätsmetrik für die modellierung dynamischer Szenen mit Bezug auf das gewählte Splitting-Verfahren jeweils über $k \in \{2, 4, 8, 16\}$ verändern.
+
 
 \subsection{Zusammenfassung}
 
