--- a/thesis/results/comparison_statistical_results_table.tex
+++ b/thesis/results/comparison_statistical_results_table.tex
@@ -1,5 +1,5 @@
 \begin{longtable}{llrlll}
-\caption{Statistical Analysis Results} \label{tab:statistical} \\
+\caption{Statistical Analysis Results} \label{tab:comparison} \\
 \toprule
 Model & Algorithm & k & Speedup $\mu$ & Speedup CI & p \\
 \midrule
