--- a/thesis/results/static_statistical_results_table.tex
+++ b/thesis/results/static_statistical_results_table.tex
@@ -1,5 +1,5 @@
 \begin{longtable}{llrllll}
-\caption{Statistical Analysis Results} \label{tab:statistical} \\
+\caption{Statistical Analysis Results} \label{tab:static} \\
 \toprule
 Model & Algorithm & k & Type & Speedup $\mu$ & Speedup CI & p \\
 \midrule
